macro/src/snapshots/diplomat__tests__method_taking_owned_slice.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                struct Foo {} impl Foo\n                                { pub fn fill_slice(s: Box<[u16]>) { unimplemented!() } }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(C)]
    #[derive(Clone, Copy)]
    struct Foo {}
    impl Foo {
        pub fn fill_slice(s: Box<[u16]>) {
            unimplemented!()
        }
    }
    use diplomat_runtime::*;
    #[no_mangle]
    extern "C" fn Foo_fill_slice(s: diplomat_runtime::DiplomatOwnedSlice<u16>) {
        let s = s.into();
        Foo::fill_slice(s)
    }
}
