macro/src/snapshots/diplomat__tests__method_taking_owned_str.snap
---
source: macro/src/lib.rs
assertion_line: 666
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                struct Foo {} impl Foo\n                                {\n                                    pub fn something_with_str(s: Box<str>) { unimplemented!() }\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(C)]
    #[derive(Clone, Copy)]
    struct Foo {}
    impl Foo {
        pub fn something_with_str(s: Box<str>) {
            unimplemented!()
        }
    }
    use core::ffi::c_void;
    use diplomat_runtime::*;
    #[no_mangle]
    extern "C" fn Foo_something_with_str(s: diplomat_runtime::DiplomatOwnedUTF8StrSlice) {
        let s = s.into();
        Foo::something_with_str(s)
    }
}
