macro/src/snapshots/diplomat__tests__mod_with_enum.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                             mod ffi\n                             {\n                                 enum Abc { A, B = 123, } impl Abc\n                                 {\n                                     fn do_something(& self)\n                                     { unimplemented ! () }\n                                 }\n                             }\n                         }).to_token_stream().to_string())"

---
mod ffi {
    #[repr(C)]
    enum Abc {
        A,
        B = 123,
    }
    impl Abc {
        fn do_something(&self) {
            unimplemented!()
        }
    }
    #[no_mangle]
    extern "C" fn Abc_do_something(this: &Abc) {
        this.do_something();
    }
    #[no_mangle]
    extern "C" fn Abc_destroy(this: Box<Abc>) {}
}

