macro/src/snapshots/diplomat__tests__mod_with_write_result.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&gen_bridge(parse_quote! {\n                            mod ffi\n                            {\n                                struct Foo {} impl Foo\n                                {\n                                    pub fn to_string(&self, to: &mut DiplomatWrite) ->\n                                    Result<(), ()> { unimplemented!() }\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod ffi {
    #[repr(C)]
    #[derive(Clone, Copy)]
    struct Foo {}
    impl Foo {
        pub fn to_string(&self, to: &mut DiplomatWrite) -> Result<(), ()> {
            unimplemented!()
        }
    }
    use diplomat_runtime::*;
    #[no_mangle]
    extern "C" fn Foo_to_string(
        this: &Foo,
        to: &mut diplomat_runtime::DiplomatWrite,
    ) -> diplomat_runtime::DiplomatResult<(), ()> {
        let ret = this.to_string(to);
        to.flush();
        ret.into()
    }
    #[no_mangle]
    extern "C" fn Foo_destroy(this: Box<Foo>) {}
}
